--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "start": "node server.js",
+    "test": "mocha",
+    "postinstall": "ng build && node server.js"
   },
   "private": true,
   "dependencies": {
