--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "e2e": "ng e2e",
     "start": "node server.js",
     "test": "mocha",
-    "heroku-postbuild": "cd ANGULAR_APP_FOLDER && npm install",
+    "heroku-postbuild": "npm install",
     "postinstall": "ng build --aot -prod"
   },
   "private": true,
